--- a/report/views/novel_list.ejs
+++ b/report/views/novel_list.ejs
@@ -2,9 +2,12 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>所持小説リスト</title> </head>
+    <title>所持小説リスト</title>
+</head>
 <body>
-    <h2>マイ・ミステリーコレクション</h2> <table border="1">
+    <h2>マイ・ミステリーコレクション</h2>
+    
+    <table border="1">
         <tr>
             <th>ID</th>
             <th>タイトル</th>
@@ -21,6 +24,6 @@
         <% } %>
     </table>
     
-    <p>（ここに後で新規登録ボタンを追加予定）</p>
+    <p><a href="/novels/create">新しい本を登録する</a></p>
 </body>
 </html>
