--- a/report/views/training_list.ejs
+++ b/report/views/training_list.ejs
@@ -27,6 +27,6 @@
         <% } %>
     </table>
     
-    <p>（ここに記録ボタンを追加予定）</p>
+    <p><a href="/training/create">記録をつける</a></p>
 </body>
 </html>
