--- a/report/views/training_list.ejs
+++ b/report/views/training_list.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>筋トレ記録一覧</title>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <h2>筋トレ記録一覧</h2>
