--- a/report/views/novel_edit.ejs
+++ b/report/views/novel_edit.ejs
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>編集</title>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <h2><%= data.title %> の編集</h2>
-    <form action="/novels/update/<%= id %>" method="POST">
+    <form action="/movies/update/<%= id %>" method="POST">
         <div>
             <label>タイトル: <input type="text" name="title" value="<%= data.title %>" required></label>
         </div>
         <div>
-            <label>著　者: <input type="text" name="author" value="<%= data.author %>" required></label>
+            <label>公開年: <input type="number" name="year" value="<%= data.year %>" required></label> 年
         </div>
         <div>
-            <label>探偵役: <input type="text" name="detective" value="<%= data.detective %>"></label>
+            <label>評　価: <input type="number" name="rating" min="1" max="5" value="<%= data.rating %>"></label> (1-5) [cite: 11]
         </div>
         <div>
-            <label>感　想: <textarea name="comment"><%= data.comment %></textarea></label>
+            <label>感　想: <input type="text" name="review" value="<%= data.review %>"></label>
         </div>
         <br>
         <input type="submit" value="更新する">
     </form>
-    <p><a href="/novels">一覧に戻る</a></p>
+    <p><a href="/movies">一覧に戻る</a></p>
 </body>
 </html>
