--- a/report/views/training_detail.ejs
+++ b/report/views/training_detail.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title><%= data.menu %> の詳細</title>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <h2>トレーニング詳細</h2>
@@ -13,13 +14,11 @@
         <li>回数: <%= data.reps %> 回</li>
         <li>日付: <%= data.date %></li>
     </ul>
-    
     <p>
-        <a href="/training/edit/<%= id %>">編集する</a> 
-        | 
-        <a href="/training/delete/<%= id %>" onclick="return confirm('本当に削除しますか？');">削除する</a>
+        <a href="/training/edit/<%= id %>">編集する</a> [cite: 16]
+        |
+        <a href="/training/delete/<%= id %>" onclick="return confirm('本当に削除しますか？');">削除する</a> [cite: 17]
     </p>
-
     <p><a href="/training">一覧に戻る</a></p>
 </body>
 </html>
