--- a/report/views/training_edit.ejs
+++ b/report/views/training_edit.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>編集</title>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <h2><%= data.menu %> の編集</h2>
@@ -14,7 +15,7 @@
             <label>重　量: <input type="number" name="weight" value="<%= data.weight %>" required></label> kg
         </div>
         <div>
-            <label>回　数: <input type="number" name="reps" value="<%= data.reps %>" required></label> 回
+            <label>回　数: <input type="number" name="reps" value="<%= data.reps %>" required></label> 回 [cite: 24]
         </div>
         <div>
             <label>日　付: <input type="date" name="date" value="<%= data.date %>" required></label>
