--- a/report/views/novel_list.ejs
+++ b/report/views/novel_list.ejs
@@ -14,12 +14,12 @@
             <th>著者</th>
             <th>操作</th>
         </tr>
-        <% for(let i = 0; i < data.length; i++) { %> [cite: 19]
+        <% for(let i = 0; i < data.length; i++) { %> 
             <tr>
                 <td><%= data[i].id %></td>
                 <td><%= data[i].title %></td>
                 <td><%= data[i].author %></td>
-                <td><a href="/novels/<%= i %>">詳細へ</a></td> [cite: 20]
+                <td><a href="/novels/<%= i %>">詳細へ</a></td> 
             </tr>
         <% } %>
     </table>
