--- a/report/views/training_detail.ejs
+++ b/report/views/training_detail.ejs
@@ -15,9 +15,9 @@
         <li>日付: <%= data.date %></li>
     </ul>
     <p>
-        <a href="/training/edit/<%= id %>">編集する</a> [cite: 16]
+        <a href="/training/edit/<%= id %>">編集する</a> 
         |
-        <a href="/training/delete/<%= id %>" onclick="return confirm('本当に削除しますか？');">削除する</a> [cite: 17]
+        <a href="/training/delete/<%= id %>" onclick="return confirm('本当に削除しますか？');">削除する</a> 
     </p>
     <p><a href="/training">一覧に戻る</a></p>
 </body>
