--- a/report/views/movie_edit.ejs
+++ b/report/views/movie_edit.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>編集</title>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <h2><%= data.title %> の編集</h2>
